--- a/app/src/main/res/layout-land/fragment_order_detail.xml
+++ b/app/src/main/res/layout-land/fragment_order_detail.xml
@@ -44,7 +44,7 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/computer_default" />
+                app:srcCompat="@android:drawable/ic_menu_camera" />
 
         </androidx.cardview.widget.CardView>
 
