--- a/app/src/main/res/menu/order_actionbar.xml
+++ b/app/src/main/res/menu/order_actionbar.xml
@@ -19,7 +19,7 @@
 
     <item
         android:id="@+id/order_by_user_item"
-        android:title="usere" />
+        android:title="user" />
 
     <item
         android:id="@+id/order_by_ram_item"
