--- a/app/src/main/res/layout-land/activity_view_user.xml
+++ b/app/src/main/res/layout-land/activity_view_user.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Buscar por:"
+                    android:text="Search by:"
                     android:textSize="20sp"
                     android:textStyle="bold" />
             </RelativeLayout>
