--- a/app/src/main/res/menu/order_actionbar.xml
+++ b/app/src/main/res/menu/order_actionbar.xml
@@ -19,14 +19,14 @@
 
     <item
         android:id="@+id/order_by_user_item"
-        android:title="user" />
+        android:title="User" />
 
     <item
         android:id="@+id/order_by_ram_item"
-        android:title="matricula" />
+        android:title="Component" />
 
     <item
         android:id="@+id/order_by_computer_model_item"
-        android:title="moto" />
+        android:title="Computer" />
 
 </menu>
